# multi-llm

./: CHANGELOG.md  Cargo.toml  EXTRACTION.md  LICENSE  README.md
.github/workflows/: publish.yaml
docs/: DESIGN.md  PHASE2_PLAN.md  PHASE3_PLAN.md
docs/adr/: 000-template.md  001-unified-message-architecture.md  002-provider-trait-design.md  003-caching-hints.md  004-error-handling-strategy.md  005-events-system.md  006-public-api-stability.md
docs/templates/: unit-test-template.md
examples/: README.md  basic_anthropic.rs  basic_lmstudio.rs  basic_ollama.rs  basic_openai.rs  error_handling.rs  multi_instance.rs  prompt_caching.rs  provider_switching.rs  tool_calling.rs
scripts/: bump-version.sh  install-hooks.sh  pre-push-check.sh  test-all.sh  test-integration.sh  test-unit.sh  verify-complexity.py  verify-file-naming.py  verify-file-size.py  verify-function-size.py  verify-imports.py  verify-test-coverage.py  verify-test-naming.py  verify-test-patterns.py  verify-test-structure.py  verify-type-naming.py  version.sh
src/: agents.rs  client.rs  config.rs  error.rs  lib.rs  logging.rs  messages.rs  provider.rs  response_parser.rs  retry.rs  tokens.rs
src/core_types/: errors.rs  events.rs  executor.rs  messages.rs  mod.rs  provider.rs
src/core_types/tests/: messages.rs  mod.rs
src/internals/: events.rs  mod.rs  response_parser.rs  retry.rs  tokens.rs
src/providers/: lmstudio.rs  mod.rs  ollama.rs  openai.rs
src/providers/anthropic/: caching.rs  conversion.rs  mod.rs  provider.rs  types.rs
src/providers/anthropic/tests/: caching.rs  conversion.rs  mod.rs  provider.rs
src/providers/openai_shared/: mod.rs  types.rs  utils.rs
src/providers/openai_shared/tests/: conversion.rs  custom_format_parser.rs  mod.rs
src/providers/tests/: mod.rs
src/tests/: agents.rs  client.rs  config.rs  dual_config_tests.rs  error.rs  helpers.rs  messages.rs  mod.rs  response_parser_tests.rs  retry.rs  structured_response_conversion.rs  token_estimation_accuracy.rs  trait_compliance.rs
src/tests/integration/: end_to_end_success_flow_tests.rs  error_handling_integration_tests.rs  helpers.rs  mod.rs  provider_switching_integration_tests.rs  retry_logic_integration_tests.rs  token_management_integration_tests.rs
src/tests/json_structured_response/: config_application_tests.rs  edge_case_tests.rs  helpers.rs  json_parsing_tests.rs  mod.rs  openai_response_format_tests.rs  structured_response_tests.rs  structured_response_trait_compliance_tests.rs
tests/: anthropic_provider_integration_tests.rs  common.rs  http_client_integration_tests.rs  lmstudio_provider_integration_tests.rs  ollama_provider_integration_tests.rs  openai_provider_integration_tests.rs  provider_trait_compliance_tests.rs  token_integration_tests.rs
